--- a/ctstem_site/ctstem_app/static/css/messages.css
+++ b/ctstem_site/ctstem_app/static/css/messages.css
@@ -6,8 +6,8 @@ ul.messages {
   font-size: 1.5em;
   width: 100%;
   position: fixed;
-  top: 90px;
-  z-index: 1000;
+  top: 70px;
+  z-index: 1002;
   padding-left: 0;
 }
 
